axum-macros/tests/from_request/fail/unknown_attr_container.stderr
error: expected one of: `via`, `rejection_derive`, `rejection`
 --> tests/from_request/fail/unknown_attr_container.rs:4:16
  |
4 | #[from_request(foo)]
  |                ^^^
